--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,7 @@
     <!--      <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">-->
     <!--      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">-->
     <!--      <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 
 </head>
 <body>
