--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="og:title" content="Wortgut-index" />
-    <meta name="og:site_name" content="Wortgut-index" />
+    <meta name="og:title" content="Wortgut" />
+    <meta name="og:site_name" content="Wortgut" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://lex.dioe.at/" />
     <meta name="og:image" content="https://lex.dioe.at/img/IamDioeLogo.475528a1.png" />
-    <meta name="og:description" content="In jedem von uns steckt ein/e Lexikograph/in" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="og:description" content="In jedem/r von uns steckt ein/e Lexikograph/in" />
+    <link rel="icon" href="<%= BASE_URL %>wortgut_icon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,500,700,900">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
